Version 2.8 (24. Juni 2015)

- Sektionsfahren: Bei Eingabe einer Gruppe mit Enter nicht Form abschicken,
  sondern zum nächsten Eingabefeld wechseln.


Version 2.7 (4. Juni 2015)

- Sektionsfahren: Null-Zeiten kann man abfragen.
- Sektionsfahren: Importieren von Zeiten ermöglicht.


Version 2.6 (10. Mai 2015)

- Einzelfahren: Null-Zeiten kann man abfragen.
- Einzelfahren: Importieren von Zeiten ermöglicht.
- Migration Source Code von Google nach GitHub.


Version 2.5 (16. August 2014)
https://sasse.googlecode.com/svn/tags/2.5

- Eingabe einer beliebigen Zahl ermöglicht. Dies war nötig, um einen Posten
  'Punkte' mit dem Wertebereich 'ALL' einzuführen. Im JP1 Challenge von
  Schwaderloch zählt man die Punkte vom Vorlauf dem Finallauf dazu.


Version 2.4 (26. Juni 2014)
https://sasse.googlecode.com/svn/tags/2.4

- Sektionsfahren: PDFs für das Notenblatt erstellt.

- Einzelschnüren: Fehler bei der Eingabe von einem Teilnehmer behoben,
  der bereits in einem anderen Wettkampf schon mal gestartet ist.


Version 2.3 (30. Juni 2012)
https://sasse.googlecode.com/svn/tags/2.3

- Fehler bei der Darstellung für das Notenblatt im Sektionsfahren behoben.
  Es werden die Noten in den richtigen Spalten (1.DG/2.DG) dargestellt.


Version 2.2 (28. Juni 2012)
https://sasse.googlecode.com/svn/tags/2.2

- Darstellung des Notenblattes für eine Gruppe im Sektionsfahren verbessert.

- Auswertungen für Amerikanerbecher und Lichtensteinbecher implementiert.


Version 2.1 (26. Juni 2012)
https://sasse.googlecode.com/svn/tags/2.1

- Kategorie ist für Schwimmen und Einzelschnüren nie editierbar; sie wird
  immer vom Mitglied abgeleitet.

- Disqualifiziert und Ausgeschieden für Ranglisten der Spezialwettkämpfe
  implementiert.

- Spezialwettkämpfe (Schwimmen, Einzelschnüren, Gruppenschnüren, Bootfährenbau)
  eingeführt.

- Initialdaten für Postenart 'Höchstes Ziel' und 'Abmeldung Sektionsfahren'
  angepasst.


Version 2.0.2 (18. Mai 2012)
https://sasse.googlecode.com/svn/tags/2.0.2
